--- a/templates/user/change-password.html
+++ b/templates/user/change-password.html
@@ -17,12 +17,12 @@
             <p>Ingrese su nueva contraseña.</p>
         </div>
         
-        {{form.password2.errors}}
+        {{form.repeat_password.errors}}
         <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseña">
-            {{form.password1}}</label>
+            {{form.new_password}}</label>
 
         <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseña">
-            {{form.password2}}</label>
+            {{form.repeat_password}}</label>
 
         <input class="form-register__input-submit" type="submit" value="Cambiar Contraseña">
     </form>
