--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -31,15 +31,15 @@
             {{form.email}}
         </label>
         
-            {{form.password2.errors}}
+            {{form.repeat_password.errors}}
         <label class="form-register__label">
             <img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseñá">
-            {{form.password1}}
+            {{form.password}}
         </label>
 
         <label class="form-register__label">
             <img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseña">
-            {{form.password2}}
+            {{form.repeat_password}}
         </label>
         <!--{{form.captcha}}-->
 
