--- a/static/css/user-menu.css
+++ b/static/css/user-menu.css
@@ -76,8 +76,10 @@
     .box-nav-user {
         position: relative;
         right: 0;
+        border-radius: 1em;
     }
     .nav-user {
         width: 100%;
+        border-radius: 1em;
     }
 }
