--- a/templates/user/user-address.html
+++ b/templates/user/user-address.html
@@ -13,39 +13,41 @@
     {% include 'includes/user-menu.html' %}
 
     <div class="box-account-section col-lg-8 col-lg-9">
+        <!-- Success or error messages -->
+
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message.message }}</li>  
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         <form method="post" class="form-profile row g-3 needs-validation" novalidate"> {% csrf_token %}
             <div class="col-md-5">
+                {{form.country.erros}}
                 <label for="validationCustom01" class="form-label">Pais</label>
-                <input type="text" class="form-control" id="validationCustom01" value="{{user.name}}" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
+                {{form.country}}
             </div>
-            <div class="col-md-5">
+            <div class="div-select-state col-md-5">
+                {{form.state.errors}}
                 <label for="validationCustom02" class="form-label">Estado</label>
-                <input type="text" class="form-control" id="validationCustom02" value="{{user.last_name}}" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
+                {{form.state}}
             </div>
             <div class="col-md-5">
+                {{form.state.errors}}
+                <label for="validationCustom03" id="label-city" class="form-label">Ciudad</label>
+                {{form.city}}
+            </div>
+            <div class="col-md-8">
                 <label for="validationCustom05" class="form-label">Dirección</label>
-                <input type="text" class="form-control" id="validationCustom05">
-                <input type="text" class="form-control mt-3" id="validationCustom05">
-                <div class="invalid-feedback">
-                    Por favor, provea un número de teléfono válido.
-                </div>
-            </div>
-            <div class="col-md-6">
-                <label for="validationCustom03" class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="validationCustom03" value="{{user.email}}" disabled>
+                {{form.address}}
+                {{form.address_2}}
             </div>
             <div class="col-md-5">
+                {{form.postal_code.errors}}
                 <label for="validationCustom05" class="form-label">Código Postal</label>
-                <input type="text" class="form-control" id="validationCustom05">
-                <div class="invalid-feedback">
-                    Por favor, provea un número de teléfono válido.
-                </div>
+                {{form.postal_code}}
             </div>
             <div class="col-12 pt-2">
                 <button class="btn btn-primary" type="submit">Guardar</button>
