--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -15,7 +15,7 @@
 					<a class="menu-page1 nav-link" id="start" aria-current="page" href="{% url 'home_app:home' %}">Inicio</a>
 				</li>
 				<li class="nav-item m-1">
-					<a class="menu-page2 nav-link" id="shop" href="#">Tienda</a>
+					<a class="menu-page2 nav-link" id="store" href="{% url 'product_app:store' %}">Tienda</a>
 				</li>
 				<li class="nav-item m-1">
 					<a class="menu-page3 nav-link" id="contact" href="{% url 'home_app:contact' %}">Contacto</a>
