--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -2,21 +2,20 @@
 
 .footer {
     display: flex;
-    padding-top: 0.625em;
+    padding-top: 0.625rem;
     flex-direction: column;
     background-color: #00f;
     align-items: center;
-    gap: 0.625em;
-    font-size: 16px;
+    gap: 0.625rem;
 }
 .footer__link {
     width: 70%;
-    padding: 0.625em;
+    padding: 0.625rem;
     color: #f50;
     background-color: #fff;
     text-align: center;
     text-decoration: none;
-    border-radius: 1em;
+    border-radius: 1rem;
     font-weight: 600;
 }
 .footer__link:hover {
@@ -25,13 +24,13 @@
 }
 .footer h5 {
     color: #fff;
-    font-size: 0.85em;
-    margin: 0em;
+    font-size: 0.85rem;
+    margin: 0rem;
 }
 .footer__container {
     width: 100%;
-    padding: 0.625em 0em;
-    border-top: 0.062em solid #999;
+    padding: 0.625rem 0rem;
+    border-top: 0.062rem solid #999;
     background-color: #00f;
     text-align: center;
 }
@@ -41,7 +40,7 @@
     font-family: Cambria;
 }
 .linkedin img {
-    width: 1.562em;
+    width: 1.562rem;
 }
 .linkedin a {
     color: #fff;
@@ -53,7 +52,7 @@
     /*Footer de la pagina*/
     .footer {
         flex-direction: row-reverse;
-        padding: 0em 0.7em;
+        padding: 0rem 0.7rem;
     }
     .footer__container {
         width: 100%;
@@ -71,23 +70,6 @@
         opacity: 0.8;
     }
     .footer__link:active {
-        text-decoration: underline 0.125em;
+        text-decoration: underline 0.125rem;
     }    
 }
-@media screen and (min-width: 1920px) {
-    /*Footer de la pagina*/
-    .footer {
-        font-size: 22px;
-    }
-}
-@media screen and (min-width: 2560px) {
-    .footer {
-        font-size: 30px;
-    }
-}
-@media screen and (min-width: 3840px) {
-    .footer {
-        font-size: 45px;
-    }
-}
-
