--- a/static/css/my-account.css
+++ b/static/css/my-account.css
@@ -5,21 +5,21 @@
     padding: 0;
 }
 .form-control, .btn {
-    padding: 0.375em 0.75em;
-    font-size: 1em;
-    border: 0.05em solid #000;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border: 0.05rem solid #000;
 }
 .form-select {
-    border: 0.05em solid #000;
+    border: 0.05rem solid #000;
 }
 .form-label {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.5rem;
     font-weight: 600;
 }
 
 /* django classes */
 .errorlist{
-    padding: 0em 1.3em;
+    padding: 0rem 1.3rem;
     background-color: #f00;
     color: #fff;
 }
@@ -31,23 +31,23 @@
 }
 /* User address and profile forms */
 .form-profile {
-    margin: 0;
-    padding-bottom: 1em;
+    margin: 0rem;
+    padding-bottom: 1rem;
 }
 .form-profile div {
-    margin-top: 1em;
-    padding: 0em 0.5em;
+    margin-top: 1rem;
+    padding: 0rem 0.5rem;
 }
 
 @media screen and (min-width: 992px) {
     .box-account-section {
         min-height: 72vh;
-        padding: 0em 1em;
+        padding: 0rem 1rem;
     }
     /* User address and profile forms */
     .form-profile {
-        padding: 0.5em 1.2em;
-        border: 0.125em solid #0008;
-        border-radius: 1em;
+        padding: 0.5rem 1.2rem;
+        border: 0.125rem solid #0008;
+        border-radius: 1rem;
     }
 }
