--- a/static/css/register.css
+++ b/static/css/register.css
@@ -6,45 +6,44 @@ body {
 .container-form {
     display: grid;
     place-content: center;
-    padding: 2em 0em;
+    padding: 2rem 0rem;
 }
 
-/*Formulario de registro y iniciar sesión*/
-
+/*Registration form and login*/
 .form-register {
-    width: 18.75em;
-    padding: 0.625em 0em;
+    width: 18.75rem;
+    padding: 0.625rem 0rem;
     display: flex;
     flex-direction: column;
-    row-gap: 1.56em;
+    row-gap: 1.56rem;
     align-items: center;
     background-color: #22f;
-    border-radius: 0.9375em;
+    border-radius: 0.9375rem;
 }
 .form__container {
-    padding: 0em 0.7em 0.625em 0.9375em;
+    padding: 0rem 0.7rem 0.625rem 0.9375rem;
     color: #fff;
 }
 .form__container p {
-    font-size: 1.25em;
+    font-size: 1.25rem;
     font-weight: 600;
 }
 .form-register__label {
     width: 85%;
     display: flex;
-    column-gap: 0.625em;
+    column-gap: 0.625rem;
 }
 .form-register__label img {
-    height: 2.1875em;
+    height: 2.1875rem;
 }
 .form-register__input, .form-register__input-submit {
     width: 100%;
     background-color: transparent;
     outline: none;
     border: none;
-    border-bottom: 0.125em solid #fff;
+    border-bottom: 0.125rem solid #fff;
     color: #fff;
-    font-size: 1.125em;
+    font-size: 1.125rem;
 }
 .form-register__input:hover, .form-register__input-submit:hover {
     background-color: #0004;
@@ -55,12 +54,12 @@ body {
 .form-register__input:focus {
     background: #0004;
     color: #fff;
-    border-bottom: 0.15em solid #0c0;
+    border-bottom: 0.15rem solid #0c0;
 }
 .form-register__input-submit {
     width: 85%;
-    margin-top: 0.625em;
-    padding: 0.625em 3.125em;
+    margin-top: 0.625rem;
+    padding: 0.625rem 3.125rem;
     background-color: #070;
     border-bottom: none;
 }
@@ -68,7 +67,7 @@ body {
     text-decoration: underline;
 }
 .form__container-2 {
-    padding-top: 0em;
+    padding-top: 0rem;
     color: #fff;
 }
 .form__container-2 a {
@@ -84,11 +83,11 @@ body {
 
 .errorlist{
     background-color: #f22;
-    padding: 0.33em 0em 0.3em 0.75em;
+    padding: 0.33rem 0rem 0.3rem 0.75rem;
     color: #fff;
 }
 .errorlist li{
-    margin: 0.33em;
+    margin: 0.33rem;
 }
 
 
@@ -97,51 +96,18 @@ body {
 @media screen and (min-width: 375px){
 
     .form-register {
-        width: 21.25em;
+        width: 21.25rem;
     }
 }
 
 @media screen and (min-width: 425px) {
     .form-register {
-        width: 22.8125em;
+        width: 22.8125rem;
     }
 }
 
 @media screen and (min-width: 768px) {
     .form-register {
-        width: 25em;
-    }
-    .form-register hr {
-        width: 2.5em;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .container-form {
-        font-size: 16px;
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .container-form {
-        font-size: 17px;
-    }
-}
-
-@media screen and (min-width: 1920px) {
-    .container-form {
-        font-size: 22px;
-    }
-}
-
-@media screen and (min-width: 2560px) {
-    .container-form {
-        font-size: 30px;
-    }
-}
-
-@media screen and (min-width: 3840px) {
-    .container-form {
-        font-size: 45px;
+        width: 25rem;
     }
 }
