--- a/static/css/user-menu.css
+++ b/static/css/user-menu.css
@@ -1,7 +1,7 @@
 .nav-user-show {
     display: block;
     width: 12%;
-    margin: 0.8em 1em;
+    margin: 0.8rem 1rem;
 }
 /* User menu movil*/
 .box-nav-user {
@@ -21,32 +21,32 @@
 .nav-user li{
     list-style: none;
 }
-.nav-user a {
+.nav-user__a {
     display: block;
-    padding: 1em 1.3em;
+    padding: 1rem 1.3rem;
     color: #fff;
     text-decoration: none;
     font-weight: 600;
-    border-bottom: 0.1em solid #fff;
+    border-bottom: 0.1rem solid #fff;
 }
-.nav-user a:hover {
-    background-color: #11f;
+.nav-user__a:hover {
+    background-color: #0004;
 }
-.nav-user a:active {
+.nav-use__a:active {
     background-color: #00f;
 }
 .nav-user__name {
     display: flex;
     align-items: center;
-    gap: 0.7em;
-    padding: 0.7em 1em;
-    border-bottom: 0.1em solid#fff;
+    gap: 0.7rem;
+    padding: 0.7rem 1rem;
+    border-bottom: 0.1rem solid#fff;
 }
 .nav-user__name img {
     width: 25%;
 }
 .nav-user__name h5 {
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 /* Class to give a color that highlights the button of the current page */
 .active-user-menu {
@@ -60,9 +60,9 @@
 }
 .nav-user-close img {
     width: 70%;
-    margin-top: 1em;
+    margin-top: 1rem;
     background-color: #44f;
-    border-radius: 1em;
+    border-radius: 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -80,10 +80,10 @@
     .box-nav-user {
         position: relative;
         right: 0;
-        border-radius: 1em;
+        border-radius: 1rem;
     }
     .nav-user {
         width: 100%;
-        border-radius: 1em;
+        border-radius: 1rem;
     }
 }
