--- a/templates/includes/user-menu.html
+++ b/templates/includes/user-menu.html
@@ -12,19 +12,19 @@
             <h5>{{user.name}} {{user.last_name}}</h5>
         </div>
         <li>
-            <a href="#" id="user-orders">Pedidos</a>
+            <a class="nav-user__a" href="#" id="user-orders">Pedidos</a>
         </li>
         <li>
-            <a href="{% url 'user_app:user_profile' %}" id="user-profile">Perfil</a>
+            <a class="nav-user__a" href="{% url 'user_app:user_profile' %}" id="user-profile">Perfil</a>
         </li>
         <li>
-            <a href="{% url 'user_app:user_address' %}" id="user-address">Dirección</a>
+            <a class="nav-user__a" href="{% url 'user_app:user_address' %}" id="user-address">Dirección</a>
         </li>
         <li>
-            <a href="#" id="user-points">Mis Puntos</a>
+            <a class="nav-user__a" href="#" id="user-points">Mis Puntos</a>
         </li>
         <li>
-            <a href="{% url 'user_app:user_logout' %}">Cerrar Sesión</a>
+            <a class="nav-user__a" href="{% url 'user_app:user_logout' %}">Cerrar Sesión</a>
         </li>
     </div>
     <div class="nav-user-close">
