--- a/templates/product/store.html
+++ b/templates/product/store.html
@@ -54,8 +54,8 @@
             </div>
         </div>
         <div class="card d-flex flex-row align-items-center border-info border-2">
-            <img src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg"
-                class="own-card-img card-img-top" alt="...">
+            <img src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg" class="own-card-img card-img-top"
+                alt="...">
             <div class="card-body">
                 <h6 class="card-title">New Truvy TruVision Health Truvy Weight Loss Combo 1 Month (30 Day) Truvy Pack
                 </h6>
@@ -63,7 +63,7 @@
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
-        
+
 
         <!--Pagination of store-->
         <nav class="mx-auto" aria-label="Page navigation example">
