--- a/static/css/header.css
+++ b/static/css/header.css
@@ -41,18 +41,163 @@
     border: 0.125rem solid #f00;
 }
 
+/* own classes */
+/* classes card product */
+.own-card-img {
+    width: 35%;
+    padding: 0rem 0rem 0rem 0.15rem;
+}
+.btn-add-cart {
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+}
+
+/* classes cart */
+.container-cart {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    background-color: #0005;
+    z-index: 10000;
+    transition: all 0.3s;
+}
+.box-cart {
+    position: relative;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    float: right;
+    padding-top: 0.5rem;
+    background-color: #fff;
+    overflow: auto;
+}
+.mini-cart-close {
+    width: 2rem;
+    right: 0.7rem;
+    cursor: pointer;
+}
+.box-cart ul {
+    padding: 0;
+}
+.box-cart__li {
+    list-style: none;
+}
+.box-cart__li a:hover{
+    outline: 0.1rem solid #00f;
+}
+.img-product-cart {
+    width: 5rem;
+    height: 5rem;
+}
+.box-cart__div {
+    width: 12rem;
+    margin-left: 0.4rem;
+}
+.box-cart__div a {
+    text-decoration: none;
+    color: #000;
+    font-size: 0.875rem;
+}
+.box-cart__div a:hover {
+    color: #00f;
+}
+.box-cart__div a:active {
+    background-color: #0005;
+}
+.product-remove {
+    width: 1.8rem;
+    margin-left: 0.4rem;
+}
+.subtotal-preview-cart {
+    margin: 0;
+    font-size: 1rem;
+}
+.view-cart {
+    padding: 0.7rem 1.2rem;
+    text-decoration: none;
+    color: #000;
+    border: 0.07rem solid #000;
+    font-family: sans-serif;
+}
+.checkout-mini-cart {
+    padding: 0.7rem 1.2rem;
+    background-color: #00f;
+    color: #fff;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+/* classes for show mini-cart */
+.mini-cart-show {
+    left: 0;
+}
+
 /*MEDIA QUERY*/
 
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 375px) {
+    /* own classes */
+    /* classes cart */
+    .box-cart {
+        width: 23.43rem;
+    }
+    .box-cart__div {
+        width: 15rem;
+    }
+    .product-remove {
+        width: 2rem;
+    }
+}
+
+@media screen and (min-width: 425px) {
+    /* own classes */
+    /* Menu header */
     .navbar-logo {
         width: 40%;
     }
 }
 
 @media screen and (max-width: 768px) {
+    /* own classes */
+    /* Menu header */
     .navbar-logo {
         width: 30%;
     }
 }
+@media screen and (min-width: 768px) {
+    /* own classes */
+    /* Menu header */
+    .navbar-logo {
+        width: 20%;
+    }
+}
 
+@media screen and (min-width: 1024px) {
+    /* own classes */
+    /* Menu header */
+    .navbar-logo {
+        width: 12%;
+    }
+
+    /* classes cart */
+    .container-cart {
+        position: absolute;
+        width: fit-content;
+        top: 6rem;
+    }
+    .box-cart {
+        height: 30rem;
+        border-top: 0.2rem solid #00f;
+        overflow: hidden;
+    }
+    .box-cart ul {
+        height: 17rem;
+        overflow: scroll;
+    }
+    .mini-cart-close {
+        display: none;
+    }
+    .mini-cart-show {
+        left: 32rem;
+    }
+}
 
