--- a/templates/product/store.html
+++ b/templates/product/store.html
@@ -16,11 +16,12 @@
     <!--Products of store-->
     <div class="container-fluid mt-3 d-flex flex-column align-content-center row-gap-3">
         <div class="card d-flex flex-row align-items-center border-info border-2">
-            <img src="https://katyshop303.com/wp-content/uploads/2021/03/ittK9pM0MSkLkeWX.jpg"
-                class="own-card-img card-img-top" alt="...">
-            <div class="card-body">
-                <h6 class="card-title">TRUVISION GEN2 + TruWeight & Energy 30-day supply Green only</h6>
+            <a class="link-card-img" href="#"><img src="https://katyshop303.com/wp-content/uploads/2021/03/ittK9pM0MSkLkeWX.jpg"
+                class="own-card-img card-img-top" alt="..."></a>
+            <div class="card-body p-2">
+                <a class="link-title-product" href="#">TRUVISION GEN2 + TruWeight & Energy 30-day supply Green only</a>
                 <p class="card-subtitle text-success"><strong>$65.97</strong></p>
+                <p class="stock-store">Quedan 14 Disponibles</p>
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
@@ -31,6 +32,7 @@
                 <h6 class="card-title">New Truvy TruVision Health Truvy Weight Loss Combo 1 Month (30 Day) Truvy Pack
                 </h6>
                 <p class="card-subtitle text-success"><strong>$87.93</strong></p>
+                <p class="stock-store">Disponible</p>
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
@@ -40,6 +42,7 @@
             <div class="card-body">
                 <h6 class="card-title">SkinnyFit SKINNY GREENS Juice Superfood Powder Green Apple 30 Servings Fit</h6>
                 <p class="card-subtitle text-success"><strong>$32.87</strong></p>
+                <p class="stock-store">Disponible</p>
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
@@ -50,6 +53,7 @@
                 <h6 class="card-title">Isagenix Isalean Strawberry Cream Shake - 1 Canister - Exp 1/2022 - Free Ship
                 </h6>
                 <p class="card-subtitle text-success"><strong>$39.97</strong></p>
+                <p class="stock-store">Disponible</p>
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
@@ -60,6 +64,7 @@
                 <h6 class="card-title">New Truvy TruVision Health Truvy Weight Loss Combo 1 Month (30 Day) Truvy Pack
                 </h6>
                 <p class="card-subtitle text-success"><strong>$129.87</strong></p>
+                <p class="stock-store">Disponible</p>
                 <a href="#" class="btn-add-cart btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
